--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url= jdbc:postgresql://localhost:5432/springsecurity
+spring.datasource.username= postgres
+spring.datasource.password= postgres
+spring.jpa.properties.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
+
+#App Properties
+
+app.jwtSecret= jpaSecretKey
+app.jwtExpirations= 86400000
 
