create ticket schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
+#Database connection
 spring.datasource.url= jdbc:postgresql://localhost:5432/springsecurity
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 spring.jpa.properties.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
-#App Properties
 
+#App Properties
 app.jwtSecret= jpaSecretKey
 app.jwtExpirations= 86400000
 
+#Oauth2 for Facebook
+spring.security.oauth2.client.registration.facebook.client-id=810167703725118
+spring.security.oauth.client.registration.facebook.client-secret=71ac58291f9e250716564b1fdf237334
+spring.security.oauth.client.registration.my-client-1.client-name=train_tickets
+spring.security.oauth.client.registration.my-client-1.client-provider=
+spring.security.oauth.client.registration.my-client-1.client-scope=
+spring.security.oauth.client.registration.my-client-1.redirect-uri=
+spring.security.oauth.client.registration.my-client-1.client-authentication-method=
+spring.security.oauth.client.registration.my-client-1.authorization-grant-type=
