implement email service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,12 @@ spring.security.oauth.client.registration.my-client-1.client-scope=
 spring.security.oauth.client.registration.my-client-1.redirect-uri=
 spring.security.oauth.client.registration.my-client-1.client-authentication-method=
 spring.security.oauth.client.registration.my-client-1.authorization-grant-type=
+
+
+#springboot mailer props
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bikeh95
+spring.mail.password=nuvdvqvyksqswjod
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
