--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
       <artifactId>spring-boot-starter-oauth2-client</artifactId>
       <version>2.7.2</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-mail</artifactId>
+          <version>2.7.3</version>
+      </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>5.3.20</version>
+    </dependency>
   </dependencies>
 
   <build>
